test/files/neg/override-object-flag.scala
// no flag enabling it, fail
trait A { object Foo }
trait B extends A  { override object Foo }
