test/files/neg/override-object-flag.check
override-object-flag.scala:3: error: overriding object Foo in trait A;
 object Foo cannot override final member
trait B extends A  { override object Foo }
                                     ^
one error found
